# third_oop_lab

./: CMakeLists.txt  README.md  functions.cpp  main.cpp
include/: Figure.hpp  FigureConteiner.hpp  Rectangle.hpp  Square.hpp  Trapezoid.hpp
src/: Figure.cpp  Rectangle.cpp  Square.cpp  Trapezoid.cpp
tests/: tests.cpp
